--- a/app/views/spree/products/index.html.erb
+++ b/app/views/spree/products/index.html.erb
@@ -12,8 +12,8 @@
 
        <%= render :partial => 'spree/shared/taxonomies' %>
       <%= render :partial => 'spree/shared/filters' %>
+      <div>
 
-  
   </div>
 <% end %>
 
